Added working version of linethrough

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="labs" class="box list">
       <h2>Labs</h2>
       <ul id="labs">
-        <li><a href="/jquery-linethrough">jquery.linethrough</a></li>
+        <li><a href="/jquery-linethrough">jquery.animated.linethrough</a></li>
       </ul>
     </div>
     
