Used one central CSS. Added jQuery project page on linethrough demo

--- a/jquery-linethrough/index.html
+++ b/jquery-linethrough/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>line-through</title>
-    <link rel="stylesheet" href="stylesheets/basic.css" type="text/css" charset="utf-8">
+    <link rel="stylesheet" href="../stylesheets/basic.css" type="text/css" charset="utf-8">
     <style type="text/css" media="screen">
       .strike {
         text-decoration: line-through;
@@ -19,6 +19,13 @@
   <body>
     <h1>jquery.line-through</h1>
     <div id="line">This is another message. There will be an animated strike-through through it all. When the page starts, the animation occurs.</div>
+    <div id="instructions" class="box">
+      <h2>Related Links</h2>
+      <ul>
+        <li><a href="http://github.com/zachinglis/jquery.animated.linethrough/">Repository</a></li>
+        <li><a href="http://plugins.jquery.com/project/linethrough/">jQuery Plugin Page</a></li>
+      </ul>
+    </div>
     <div id="debug" />
   </body>
 </html>
