--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <html>
   <head>
     <title>line-through</title>
-    <link rel="stylesheet" href="stylesheets/basic.css" type="text/css" charset="utf-8">
-    <style type="text/css" media="screen">
-
-    </style>
+    <link rel="stylesheet" href="../stylesheets/basic.css" type="text/css" charset="utf-8">
     <script src="http://www.google.com/jsapi"></script>
     <script type="text/javascript">
       google.load("jquery", "1.3.2");
@@ -52,7 +49,7 @@
     </div>
     
     <div id="other-repos" class="box list">
-      <h2>Other Repositories</h2>
+      <h2>Repositories</h2>
       <ul id="repositories"></ul>
     </div>
   </body>
